--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bracelet-calc",
   "version": "0.1.0",
+  "homepage": "https://zachjhuang.github.io/bracelet-calc/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
